--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "antd": "^3.23.5",
+    "apexcharts": "^3.8.6",
     "react": "^16.10.1",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
